
openadaptor 3.4.3
=======

Connectors
==========

 * New DynamicFileWriteConnector allows writing to files with names dynamically 
   derived from a message payload (SC68). 
   
 * FileWriteConnector - ported rollover functionality (based on file size and file age)  
   from legacy Openadaptor.   
   
 * WebServicePollingReadConnector renamed to WebServiceReadConnector.  

Processors
==========

Examples
========

 * Added example of a file write connector with dynamically derived file names
   (example\spring\connectors\file\file-dynamic.xml).
   
 * Added example of a file write connector that rolls over output files
   (example\spring\connectors\file\file-rollover.xml).  

Miscellaneous
=============

 * SpringAdaptor will automatically configure and register an Adaptor and associated Router
   in the Spring context if they are not explicitly defined. This allows simple Adaptor
   configurations to be defined just by declaring an ordered set of IComponents.
   A bean defined with an id of ExceptionProcessor will be automatically set as the Router's 
   exceptionProcessor.
   
Bug Fixes
=========

SC69: Changes in removal of JVM shutdown hook.

=================================================
openadaptor3 production 3.4.2 Release Notes

See licence.txt for Licence information.
=================================================

Date: 18th July 2008
Author: openadaptor Core Team

openadaptor 3.4.2
=======

Connectors
==========

 * JDBCReadConnector & JDBCWriteConnector - preambleSQL and postambleSQL properties
   renamed to afterConnectSql and beforeDisconnectSql, respectively. Setters for 
   old properties have been deprecated.

 * JDBCReadConnector - new properties, preReadSql and postReadSql, get executed
   before the 'main' SQL that returns a result set, and after the result set
   has been read, respectively.

 * JDBCWriteConnector#connect - additional safety checks to allow a subclass 